manifests/deployment/dd-prototype-development/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dd-prototype-development-blue
  namespace: default
  labels:
    app: dd-prototype-development-blue
    deploy-id: dd-prototype-development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dd-prototype-development-blue
  template:
    metadata:
      labels:
        app: dd-prototype-development-blue
        deploy-id: dd-prototype-development
    spec:
      containers:
        - name: dd-prototype-development-blue
          image: underpost/underpost-engine:v3.4.5
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - >
              underpost start --build --run dd-prototype development
          readinessProbe:
            {
              "httpGet": {
                "path": "/_internal/ready",
                "port": 4025
              },
              "initialDelaySeconds": 5,
              "periodSeconds": 5,
              "timeoutSeconds": 3,
              "failureThreshold": 3
            }
          livenessProbe:
            {
              "httpGet": {
                "path": "/_internal/health",
                "port": 4025
              },
              "initialDelaySeconds": 30,
              "periodSeconds": 15,
              "timeoutSeconds": 3,
              "failureThreshold": 3
            }
          startupProbe:
            {
              "httpGet": {
                "path": "/_internal/ready",
                "port": 4025
              },
              "initialDelaySeconds": 10,
              "periodSeconds": 10,
              "timeoutSeconds": 3,
              "failureThreshold": 180
            }



---
apiVersion: v1
kind: Service
metadata:
  name: dd-prototype-development-blue-service
  namespace: default
spec:
  selector:
    app: dd-prototype-development-blue
  ports:
    - name: 'tcp-4026'
      protocol: TCP
      port: 4026
      targetPort: 4026
    - name: 'udp-4026'
      protocol: UDP
      port: 4026
      targetPort: 4026

    - name: 'tcp-4027'
      protocol: TCP
      port: 4027
      targetPort: 4027
    - name: 'udp-4027'
      protocol: UDP
      port: 4027
      targetPort: 4027

    - name: 'tcp-4028'
      protocol: TCP
      port: 4028
      targetPort: 4028
    - name: 'udp-4028'
      protocol: UDP
      port: 4028
      targetPort: 4028

    - name: 'tcp-4029'
      protocol: TCP
      port: 4029
      targetPort: 4029
    - name: 'udp-4029'
      protocol: UDP
      port: 4029
      targetPort: 4029

    - name: 'tcp-4030'
      protocol: TCP
      port: 4030
      targetPort: 4030
    - name: 'udp-4030'
      protocol: UDP
      port: 4030
      targetPort: 4030

    - name: 'tcp-4031'
      protocol: TCP
      port: 4031
      targetPort: 4031
    - name: 'udp-4031'
      protocol: UDP
      port: 4031
      targetPort: 4031

    - name: 'tcp-4032'
      protocol: TCP
      port: 4032
      targetPort: 4032
    - name: 'udp-4032'
      protocol: UDP
      port: 4032
      targetPort: 4032

    - name: 'tcp-4033'
      protocol: TCP
      port: 4033
      targetPort: 4033
    - name: 'udp-4033'
      protocol: UDP
      port: 4033
      targetPort: 4033

    - name: 'tcp-4034'
      protocol: TCP
      port: 4034
      targetPort: 4034
    - name: 'udp-4034'
      protocol: UDP
      port: 4034
      targetPort: 4034

    - name: 'tcp-4035'
      protocol: TCP
      port: 4035
      targetPort: 4035
    - name: 'udp-4035'
      protocol: UDP
      port: 4035
      targetPort: 4035
  type: LoadBalancer
