manifests/deployment/dd-prototype-development/httproute.yaml

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: healthcare.nexodev.org
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: dd-prototype-development
      namespace: default
  hostnames:
    - healthcare.nexodev.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /offline
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /healthcare.nexodev.org/root/offline
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /maintenance
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /healthcare.nexodev.org/root/maintenance
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: dd-prototype-development-traffic-service
          port: 4026
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /peer
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: dd-prototype-development-traffic-service
          port: 4027
          weight: 100

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: www.bymyelectrics.com
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: dd-prototype-development
      namespace: default
  hostnames:
    - www.bymyelectrics.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /offline
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /www.bymyelectrics.com/root/offline
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /maintenance
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /www.bymyelectrics.com/root/maintenance
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: dd-prototype-development-traffic-service
          port: 4028
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /peer
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: dd-prototype-development-traffic-service
          port: 4029
          weight: 100

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bymyelectrics.com
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: dd-prototype-development
      namespace: default
  hostnames:
    - bymyelectrics.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: dd-prototype-development-traffic-service
          port: 4030
          weight: 100

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vitaintegral.nexodev.org
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: dd-prototype-development
      namespace: default
  hostnames:
    - vitaintegral.nexodev.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /offline
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /vitaintegral.nexodev.org/root/offline
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /maintenance
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /vitaintegral.nexodev.org/root/maintenance
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: dd-prototype-development-traffic-service
          port: 4031
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /peer
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: dd-prototype-development-traffic-service
          port: 4032
          weight: 100

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: www.cecinasmarcelina.com
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: dd-prototype-development
      namespace: default
  hostnames:
    - www.cecinasmarcelina.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /offline
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /www.cecinasmarcelina.com/root/offline
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /maintenance
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /www.cecinasmarcelina.com/root/maintenance
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: dd-prototype-development-traffic-service
          port: 4033
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /peer
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: dd-prototype-development-traffic-service
          port: 4034
          weight: 100

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cecinasmarcelina.com
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: dd-prototype-development
      namespace: default
  hostnames:
    - cecinasmarcelina.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: dd-prototype-development-traffic-service
          port: 4035
          weight: 100
