manifests/deployment/dd-prototype-development/proxy.yaml

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: healthcare.nexodev.org
  namespace: default
spec:
  virtualhost:
    fqdn: healthcare.nexodev.org
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-prototype-development-traffic-service
          port: 4026
          weight: 100
    
    - conditions:
        - prefix: /peer
      
      enableWebsockets: true
      services:
        - name: dd-prototype-development-traffic-service
          port: 4027
          weight: 100
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: www.bymyelectrics.com
  namespace: default
spec:
  virtualhost:
    fqdn: www.bymyelectrics.com
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-prototype-development-traffic-service
          port: 4028
          weight: 100
    
    - conditions:
        - prefix: /peer
      
      enableWebsockets: true
      services:
        - name: dd-prototype-development-traffic-service
          port: 4029
          weight: 100
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: bymyelectrics.com
  namespace: default
spec:
  virtualhost:
    fqdn: bymyelectrics.com
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-prototype-development-traffic-service
          port: 4030
          weight: 100
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: vitaintegral.nexodev.org
  namespace: default
spec:
  virtualhost:
    fqdn: vitaintegral.nexodev.org
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-prototype-development-traffic-service
          port: 4031
          weight: 100
    
    - conditions:
        - prefix: /peer
      
      enableWebsockets: true
      services:
        - name: dd-prototype-development-traffic-service
          port: 4032
          weight: 100
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: www.cecinasmarcelina.com
  namespace: default
spec:
  virtualhost:
    fqdn: www.cecinasmarcelina.com
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-prototype-development-traffic-service
          port: 4033
          weight: 100
    
    - conditions:
        - prefix: /peer
      
      enableWebsockets: true
      services:
        - name: dd-prototype-development-traffic-service
          port: 4034
          weight: 100
    
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: cecinasmarcelina.com
  namespace: default
spec:
  virtualhost:
    fqdn: cecinasmarcelina.com
  routes:
    - conditions:
        - prefix: /
      
      enableWebsockets: true
      services:
        - name: dd-prototype-development-traffic-service
          port: 4035
          weight: 100
